# Openai-mDeberta-ask

./: .gitignore  Dockerfile  LEIAME.md  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/data/index_hf/: index.faiss  index.pkl
app/data/index_openai/: index.faiss  index.pkl
app/models/: ask_site.py  ask_site_agent.py  create_knowledge_base.py  duck_go.py  mdeberta.py  openai_model.py  utils.py
app/pages/: 1_File_QA.py  2_Site_QA.py  2_Website_QA.py  3_duck-duck-go.py
