[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rechama-storytelling"
description = "Storytelling KPI Rechamada"
version = "1.0.0"
readme = "README.md"
keywords = ["wittel", "models"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: FastAPI",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Intended Audience :: Developers",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = []
namespaces = true

# [project.scripts]
# my-script = "my_package.module:function"

[tool.pytest.ini_options]
addopts = """
  -v -x -rxXs
  --cov=app
  --cov-report=xml
  --cov-fail-under=90
  --strict-config
  --strict-markers
"""
testpaths = ["tests"]

[tool.mypy]
mypy_path = "app"
follow_imports = "skip"
show_error_codes = true
disallow_untyped_defs = true
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
# exclude = "ml_models/vader/.*"
plugins = "sqlalchemy.ext.mypy.plugin"

# [[tool.mypy.overrides]]
# module = "tests.*"
# disallow_untyped_defs = False
# check_untyped_defs = True

[tool.isort]
profile = "black"
line_length = 88
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
combine_as_imports = true
ensure_newline_before_comments = true
include_trailing_comma = true
known_first_party = ["app"]

[tool.black]
line_length = 88
color = true
target_version = ["py38", "py39", "py310"]